--- a/docs/orchestrator-config-milestone-2.json
+++ b/docs/orchestrator-config-milestone-2.json
@@ -1,5 +1,5 @@
 {
-  "repository": "git@github.com:landovsky/orchestrator-ai.git",
+  "repository": "git@github.com:landovsky/orchestra-ai.git",
   "ref": "epic/models",
   "iterations": [
     {
